[package]
name = "go2web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
linked_hash_set = "0.1.4"
reqwest = "0.12.1"
scraper = "0.19.0"
tokio = {version = "1.36.0", features = ["full"]}
