[package]
name = "go2web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = "1.0.0"
fs = "0.0.5"
futures = "0.3.30"
http = "1.1.0"
linked_hash_set = "0.1.4"
reqwest = "0.12.1"
scraper = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = {version = "1.36.0", features = ["full"]}
